# WSInduction

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
scripts/: batch.sh  fastsubs.sh  labeling.py  rename.sh  scode.sh
src/: cluster.cpp  config.cpp  extractor.cpp  main.cpp  processor.cpp  utils.cpp
src/include/: cluster.h  config.h  extractor.h  processor.h  utils.cpp  utils.h
